--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
+    "i18next": "^25.5.2",
     "imagesloaded": "^5.0.0",
     "lightgallery": "^2.8.2",
     "masonry-layout": "^4.2.2",
     "next": "14.1.4",
+    "next-i18next": "^15.4.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^15.7.3",
     "react-icons": "^5.1.0",
     "sanitize-html": "^2.13.0",
     "sass": "^1.75.0",
