--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.9.11",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^5.2.2",
     "@mui/icons-material": "^5.16.0",
     "@mui/lab": "^5.0.0-alpha.115",
     "@mui/material": "^5.16.0",
@@ -25,14 +26,17 @@
     "masonry-layout": "^4.2.2",
     "next": "14.1.4",
     "next-i18next": "^15.4.2",
+    "nodemailer": "^7.0.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.63.0",
     "react-i18next": "^15.7.3",
     "react-icons": "^5.1.0",
     "sanitize-html": "^2.13.0",
     "sass": "^1.75.0",
     "swiper": "^11.1.1",
-    "truncate-html": "^1.1.1"
+    "truncate-html": "^1.1.1",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.2.4",
