Added chenging to locale

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,12 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# documentation/guide files (keep only README.md)
+*_GUIDE.md
+*_SETUP.md
+*_FIX.md
+*_IMPLEMENTATION.md
+*_COMPARISON.md
+*_REMOVAL.md
+QUICK_START_*.txt
