--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemailer": "^7.0.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-google-recaptcha-v3": "^1.11.0",
     "react-hook-form": "^7.63.0",
     "react-i18next": "^15.7.3",
     "react-icons": "^5.1.0",
