--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.16.0",
     "@mui/lab": "^5.0.0-alpha.115",
     "@mui/material": "^5.16.0",
+    "@supabase/supabase-js": "^2.75.0",
     "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
